<resources>

    <string name="app_name">PoochPatrol</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_facebook">FacebookActivity</string>
    <string name="title_activity_carrer">CarrerActivity</string>
    <string name="menu_carrer_title">Carrers</string>
    <string name="menu_carrer_title_condensed">Carrers</string>
    <string name="add_dog_title">1. Set Up Your Dog</string>
    <string name="title_activity_add_dog">AddDogActivity</string>
    <string name="title_activity_dog">DogActivity</string>
    <string name="add_dog_photo">Photo</string>
    <string name="add_dog_dogs_name">Dogs Name</string>
    <string name="add_dog_dogs_age">Dogs Age</string>
    <string name="add_dog_dogs_breed">Dogs Breed</string>
    <string name="add_dog_next">Next</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_photo">PhotoActivity</string>
    <string name="browse_photos">Browse photos</string>
    <string name="make_photos">Make photo</string>
    <string name="title_activity_dogs_list">DogsListActivity</string>
    <string name="title_activity_authorize">AuthorizeActivity</string>
    <string name="title_activity_image_loader">ImageLoaderActivity</string>
    <string name="add_dog">Add dog</string>
    <string name="dogs_list">Dogs list</string>
    <string name="title_activity_route">RouteActivity</string>
    <string name="show_walk">Show Walk</string>
    <string name="title_activity_file_browser">FileBrowserActivity</string>

</resources>