<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        
        <TextView
            android:id="@+id/textViewPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_dog_photo"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <ImageView
            android:id="@+id/imageViewDog"
            android:layout_width="71dp"
            android:layout_height="71dp"
            android:clickable="true"
            android:onClick="onPhotoClick"
            android:src="@android:drawable/ic_menu_gallery" />

        <TextView
            android:id="@+id/textViewDogName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_dog_dogs_name"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1.0" >

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textViewDogsAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_dog_dogs_age"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/editTextDogsAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textViewDogsBreed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_dog_dogs_breed"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/editTextDogsBreed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        
        </LinearLayout>
          
          <Button
              android:id="@+id/buttonNext"
              android:layout_width="320dp"
              android:layout_height="wrap_content"
              android:onClick="onNextClick"
              android:text="@string/add_dog_next" />
          
    </LinearLayout>

</RelativeLayout>